<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbarColor"
        android:gravity="center_vertical"
        android:minHeight="?actionBarSize">

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Title"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />




    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btnSave"
            app:backgroundTint="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_save_style"
            android:text="@string/btnSave"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginVertical="20dp"
            />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnDelete"
            app:backgroundTint="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_save_style"
            android:text="@string/delete_allBtn"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginVertical="20dp"
            />

    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/listV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:dividerHeight="2dp"
        android:divider="@color/toolbarColor">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/title"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/titleInput"
            android:hint="@string/titleHint"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            tools:ignore="Autofill,TextFields" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/desc"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/descriptionInput"
            android:hint="@string/hintDescription"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:minLines="3"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            tools:ignore="Autofill,TextFields"/>


    </LinearLayout>

    <Button
        android:id="@+id/btnShow"
        app:backgroundTint="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_save_style"
        android:text="@string/show_data"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginVertical="20dp"
        />

    <TextView
        android:id="@+id/DbDataTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/your_data_hereHINT"
        android:padding="10dp"
        android:text=""
        android:textSize="22sp" />

</LinearLayout>