<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateActivity"
    android:orientation="vertical"
    android:background="@drawable/update_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="38sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:text="@string/update_note"
        android:layout_margin="14dp"/>

    <TextView
        android:id="@+id/editID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:text="@string/updating_id"
        android:layout_margin="14dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:text="@string/title"
        android:gravity="center"
        android:layout_margin="14dp"/>
    <EditText
        android:id="@+id/inputTitleEdit"
        android:backgroundTint="@color/black"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:text="@string/desc"
        android:gravity="center"
        android:layout_margin="14dp"/>
    <EditText
        android:id="@+id/inputDescEdit"
        android:backgroundTint="@color/black"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="180dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/update"
        android:textSize="30sp"/>


</LinearLayout>